--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
 
           <div class="field">
             <label for="hora">Hora<span class="required">*</span></label>
-            <input type="time" id="hora" name="hora" required>
+            <input type="time" id="hora" name="hora">
           </div>
         </div>
       </section>
@@ -889,3 +889,4 @@
   </script>
 </body>
 </html>
+
