--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
           </div>
 
           <div class="field">
-            <label for="hora">Hora<span class="required">*</span></label>
+           <label for="hora">Hora</label>
             <input type="time" id="hora" name="hora">
           </div>
         </div>
@@ -889,4 +889,5 @@
   </script>
 </body>
 </html>
+
 
